--- a/css/account.css
+++ b/css/account.css
@@ -24,10 +24,15 @@
 	margin-top: 16px;
 	
 	font-size: 14px;
+	display: inline;
 }
 
 .action-button {
 	float: right;
+}
+
+.appy{
+	display: inline;
 }
 
 
@@ -47,7 +52,6 @@
 .title{
 	text-align: center;
 	font-size: 20px;
-	text-decoration: underline;
 	margin-bottom: 30px;
 }
 
@@ -100,25 +104,91 @@ table hr {
 }
 
 .category{
-	margin-top: 10px;
-	margin-bottom: 5px;
+	margin-top: 5px;
+	display:inline;
+	
 }
+.left-col{
+	min-height: 450px;
+	max-height: 450px;
+	overflow: auto;
+}
+
 
 .center-col{
 	border-left: 1px solid;
 	border-right: 1px solid;
 	min-height: 450px;
+	max-height: 450px;
+	overflow: auto;
+}
+
+.right-col{
+	min-height: 450px;
+	max-height: 450px;
+	overflow: auto;
 }
 
 .apply{
 	width: 50px;
 	text-align: center;
-	visibility: hidden;
 	margin-left: 20px;
+	visibility: hidden;
 }
 
 .non-active{
 	background-color:#E8E8E8;
 	border-top-left-radius:4px;
 	border-top-right-radius:4px;
+}
+
+.date{
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+
+
+#form-reg, #acces-form{
+	margin-left:5px;
+	font-size:12px;
+	font-weight:700;
+	
+
+}
+#form-col1{
+	margin-top:0px;
+	text-align:right;
+	float:left;
+	margin-right:5px;
+	min-width: 150px;
+}
+#form-col2{
+	margin-top:0px;
+	text-align:left;
+}
+
+.field{
+	width: 150px;
+}
+
+.field-name{
+	min-height:32px;
+	vertical-align:middle; 
+}
+
+.row{
+	margin-bottom: 2px;
+	padding-bottom: 0px;
+	text-align: center;
+}
+
+
+#dialog-pwd{
+	width: 200px;
+}
+
+#changePwd{
+	width: 90%;
+	height:5%;
+	font-size: small;
 }
