--- a/css/cart.css
+++ b/css/cart.css
@@ -25,9 +25,16 @@
 	text-align: center;
 }
 
-#table-title{
-	font-size: 25px;
-	font-style: italic
+#table_title{
+	font-size: 30px;
+	font-style: italic;
+	color: #09F;
+	margin-left: 20px;
+}
+
+#keep_buying{
+	text-align: center;
+	vertical-align: middle;
 }
 
 /* -------------- TABLE -------------- */
