--- a/css/delivery.css
+++ b/css/delivery.css
@@ -25,10 +25,11 @@
 
 #submit-address-button {
 	padding-top: 26px;
+	float: right;
+	margin-right: 55px;
 }
 
 #submit-newaddress-button {
-	margin-top: -33px;
 	float: right;
 }
 
@@ -40,12 +41,10 @@
 	color: #09F;
 	font-size: 18px;
 	font-weight: bold;
-	text-decoration: underline;
 }
 
 .product-name {
 	font-weight: bold;
-	text-decoration: underline;
 }
 
 .instruction {	
@@ -79,8 +78,6 @@
 
 #address, #cart-products {
 	padding: 20px;
-	border: 2px solid #222;
-	border-radius: 20px;
 }
 
 .content {
@@ -97,11 +94,11 @@
 }
 
 #address-separator {
-	margin: 50px 0px 20px;
+	margin: 20px 0px;
 }
 
-input[type="number"] {
-	width: 80px;
+.num {
+	width: 100px;
 }
 
 .radio label, input[type="radio"] {
@@ -110,6 +107,9 @@ input[type="number"] {
 }
 
 #cart-products-table {
+	max-height: 680px;
+	overflow: auto;
+	display: block;
 	border-spacing: 10px;
 	border-collapse: separate;	
 }
@@ -120,6 +120,16 @@ input[type="number"] {
 }
 
 #cart-products {
-	max-height: 690px;
-	overflow: auto;
+	border-left: 2px solid #222;
+	padding-left: 80px;
+}
+
+#total-price {
+	font-size: 20px;
+	color: #09c;
+	font-weight: bold;
+}
+
+td {
+	vertical-align: top;
 }
