--- a/css/product.css
+++ b/css/product.css
@@ -37,9 +37,13 @@
 
 /* --- Product specifications --- */
 
-#product-specifications .title{
+select{
+	text-align: center;
+}
+
+#product-specifications{
 	font-family:Tahoma, Geneva, sans-serif;
-	font-size: 22px;
+	font-size: 25px;
 	font-weight: bold;	
 	color: #09F;
 	margin-left: -20px;
@@ -47,6 +51,16 @@
 	margin-top: 10px;
 	text-decoration: underline;
 }
+
+.title{
+	font-family:Tahoma, Geneva, sans-serif;
+	font-size: 20px;
+	margin-left: -20px;
+	margin-bottom: 5px;
+	margin-top: 10px;
+	text-decoration: underline;
+}
+
 #product-specifications select{
 	font-size:14px;
 	font-weight:100;
@@ -67,29 +81,36 @@
 	margin: 4px 10px 0px;
 }
 
-#add-to-cart, #add-to-wishlist{
+#addToWishlist{
 	display: block;
 	margin-top: 20px;
 	padding-top:13px;
 	font-size:14px;
-	width:280px;
+	width:300px;
 	height:50px;
+	background-color: #E294EC;
+	color: #FFF;
 }
+
+
+#addToCart{
+	display: block;
+	margin-top: 20px;
+	padding-top:13px;
+	font-size:14px;
+	width:300px;
+	background-color: #91D2E6;
+	color: #FFF;
+	height:50px;
+	border: 0px;
+	border-color: #FFF;
+}
+
 
 #add-to-cart {
 	margin-top: 60px;	
 }
 
-#buy{
-	display: block;
-	margin-left: 80px;
-	margin-top: 20px;
-	padding-top: 13px;
-	font-size:14px;
-	width:120px;
-	height:50px;
-	text-align:center;
-}
 
 #product-specifications a:hover {
 	text-decoration: none;
@@ -97,6 +118,11 @@
 
 #product-buttons {
 	margin-left: 90px;
+}
+
+#prod_price{
+	font-size: 30px;
+	color: #09F;
 }
 
 /* --- Sugestions --- */
@@ -142,133 +168,4 @@
 .sugestion .name {
 	font-weight: bold;
 }
-/*---- login ----*/
 
-#blanket {
-	background-color:#111;
-	opacity: 0.65;
-	*background:none;
-	position:absolute;
-	z-index: 9001;
-	top:0px;
-	left:0px;
-	width:100%;
-}
-
-#login {
-	left:20%;
-	top: 15%;
-	width: 800px;
-	height: 530px;
-	background: #DDD;
-	position: absolute;
-	border: 2px solid black;
-	font-family:Tahoma, Geneva, sans-serif;
-	opacity:0;
-	-webkit-transition: opacity 400ms ease-in; /*css3*/
-	-moz-transition: opacity 400ms ease-in; /*para mozilla*/
- 	transition: opacity 400ms ease-in; /*para IE*/
-	pointer-events: none;
-}
-
-#login:target{
-	opacity: 1;
-	pointer-events: auto;
-}
-
-
-#cartOkPopup, #wishlistOkPopup{
-	left:35%;
-	top: 40%;
-	width:450px;
-	height: 50px;
-	position: absolute;
-	border: 2px solid black;
-	z-index: 10000;
-	font-family:Tahoma, Geneva, sans-serif;
-	background: rgba(255, 255, 255, 1);
-	text-align:center;
-	line-height:50px;
-	opacity:0;
-	pointer-events: none;
-}
-#cartOkPopup:target,  #wishlistOkPopup:target{
-	-webkit-animation: okPopup 4s;
-	-moz-animation: okPopup 4s;
-	animation: okPopup 4s;
-}
-@-webkit-keyframes okPopup {
-    0%   {opacity: 0;}
-    25%  {opacity: 1;}
-    75%  {opacity: 1;}
-    100% {opacity: 0;}
-}
-.close2 {
-	border:2px solid black;
-	position: absolute;
-	right: 10px;
-	text-align: center;
-	top: 10px;
-	width: 24px;
-	text-decoration: none;
-	font-weight: bold;
-	background-color:#FFF;
-	color: #000;
-}
-.close2:visited, .close2:link, .close2:active {
-	color: #000;
-	text-decoration: none;	
-}
-
-.close2:hover {
-	color: #333;
-	text-decoration: none;	
-}
-
-#register{
-	text-align:center;
-	margin: 25px 12px 0px 30px;
-	background-color:white;
-	width: 370px;
-	height: 470px;
-	border: 2px solid black;
-	float:left;
-}
-#form-reg, #acces-form{
-	margin-left:5px;
-	font-size:12px;
-	font-weight:700;
-	
-
-}
-#form-col1{
-	text-align:left;
-	float:left;
-	margin-right:5px;
-}
-#form-col2{
-	text-align:left;
-}
-#lastName{ /* VER */
-	margin-top:130px;
-}
-.btn-submit{
-	margin-left:100px;
-}
-#access{
-	text-align:center;
-	margin: 25px 50px 0px 12px;
-	background-color:white;
-	width: 320px;
-	height: 270px;
-	border: 2px solid black;
-	float:right;
-}
-
-/*--- spans----*/
-.reg-log{
-	font-size:24px;
-	text-decoration:underline;
-	font-weight:bold;
-
-}
