--- a/css/search.css
+++ b/css/search.css
@@ -1,8 +1,10 @@
 @charset "utf-8";
-/* CSS Document */
-
+/* CSS Document 
 
 /* -------------- BUTTONS -------------- */
+a{
+	text-decoration: none;
+}
 
 .btn-default{
 	border-color: #000000;
@@ -52,7 +54,7 @@ button.btn.btn-primary{
 
 .filter-separator {
 	border-color: #06C;
-	padding-bottom:10px;
+	margin-top: 20px;
 }
 
 /* -------------- OTHERS -------------- */
@@ -91,3 +93,40 @@ input[name="price-min"], input[name="price-max"]{
 	min-width:80px;
 	min-height:80px;
 }
+
+.product{ /* agregar transitions */
+
+	margin: 5px;
+	text-align: center;
+	width: 160px;
+	min-height: 225px;
+	white-space: nowrap;
+	overflow: hidden;
+	position: relative;
+	z-index: 1;
+	text-overflow: ellipsis;
+	border: 5px solid grey;
+	border-radius: 5px;
+	float: left;
+	color: black;
+	
+}
+
+.product:hover{
+	width: 160px;
+	border: 5px solid #06C;
+	overflow: visible;
+	white-space: normal;
+	position: relative;
+	z-index: 9000;
+	
+}
+
+input[name="priceMin"], input[name="priceMax"] {
+	width: 70px;
+	display: inline-block;
+	margin-left: 5px;
+	margin-right: 10px;
+}
+
+
