--- a/css/wish_list.css
+++ b/css/wish_list.css
@@ -17,9 +17,10 @@
 	text-align: center;
 }
 
-#table-title{
+#table_title{
 	font-size: 25px;
-	font-style: italic
+	font-style: italic;
+	margin-left: 20px;
 }
 
 #total{
@@ -43,3 +44,17 @@
 	text-align: center;
 }
 
+#table_title{
+	font-size: 30px;
+	font-style: italic;
+	color: #09F;
+}
+
+.table-button {
+	font-size: 11px;
+	color: #FFF;
+}
+
+#moveToCart{
+	color: #FFF; 
+}
