--- a/css/account.css
+++ b/css/account.css
@@ -14,7 +14,8 @@
 /* -------------- BUTTONS -------------- */
 
 #edit-btn {
-	font-size: 16px;	
+	font-size: 16px;
+	margin-left: 300px;	
 }
 
 #pwd-btn {
@@ -188,7 +189,7 @@ table hr {
 }
 
 #changePwd{
-	width: 90%;
+	width: 100%;
 	height:5%;
 	font-size: small;
 }
